--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar with Nested Dropdowns</title>
-    <link rel="stylesheet" href="./navbar.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -562,7 +562,29 @@
             </div>
         </div>
     </nav>
-    <script src="./navbar.js"></script>
+
+    <div class="des-container">
+        <p><b>Notice: </b>File your annual accounts (AOC-4) before 29th October. <a href="">Talk to our expert</a></p>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
