--- a/pages/Business-setup/Tax-&-Compliance/GSTRegistration.html
+++ b/pages/Business-setup/Tax-&-Compliance/GSTRegistration.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/gstregistration.css"/>
+    <link rel="stylesheet" href="C:\Users\shary\OneDrive\Desktop\legalsearch\css\gstregistration.css">
     <title>Document</title>
 </head>
 <body>
@@ -557,8 +557,67 @@
     </div>
 </div>
 
-<div>
+</div>
+</div>
+
+<div class="container1000">
+     <div class="inside-the-container">
+<h1>Different Categories Which Requires GST Registration</h1>
+<p>Below listed categories are required to register GST</p>
+<ul>
+    <li>Education and Learning</li>
+    <li>Health and Wellness</li>
+    <li>Electricity, Water and Local services</li>
+    <li>Money and Taxes</li>
+    <li> Jobs</li>
+    <li> Justice, Law and Grievances</li>
+    <li> Travel and Tourism</li>
+    <li>Business and Self-employed</li>
+    <li> Births, Deaths, Marriages and Child care</li>
+    <li>  Pension and Benefits</li>
+    <li>Transport and Infrastructure</li>
+    <li>Citizenship, Visas & Passports</li>
+    <li> Agriculture, Rural and Environment</li>
+    <li> Science, IT and Communications</li>
+    <li> Youth, Sports and Culture</li>
+    <li> Essential Government Services during Pandemic</li>
+    <li>  Art & Culture</li>
+    <li>Communication</li>
+    <li> Defence</li>
+    <li>  Home Affairs & Enforcement</li>
     
+</ul>
+</div>
+</div>
+<div class="faq">
+   
+    <div class="faq-container">
+        <h1>GST Registration FAQs</h1>
+        <div class="faq-box-container1">
+          <div class="faq-box1">
+            <h3>Can I register for GST voluntarily if my turnover is below the threshold?</h3>
+            <p>Yes, you can voluntarily register for GST even if your turnover is<br> below the threshold. It might be beneficial for availing input tax <br>credits and participating in interstate transactions, improving your<br> business credibility</p>
+          </div>
+          <div class="faq-box1">
+            <h3>What are the penalties for not registering for GST on time?</h3>
+            <p>Penalties for not registering for GST on time include late fees and<br> interest charges. It's crucial to adhere to registration deadlines to <br>avoid financial implications and ensure compliance with tax <br>regulations.</p>
+          </div>
+        </div>
+
+        <div class="faq-box-container1">
+            <div class="faq-box1">
+              <h3></h3>
+              <p></p>
+            </div>
+            <div class="faq-box1">
+              <h3></h3>
+              <p></p>
+            </div>
+          </div>
+
+
+    </div>
+
 </div>
 </body>
 </html>
