--- a/pages/Business-setup/Tax-&-Compliance/GSTRegistration.html
+++ b/pages/Business-setup/Tax-&-Compliance/GSTRegistration.html
@@ -604,18 +604,72 @@
           </div>
         </div>
 
-        <div class="faq-box-container1">
+        <div class="faq-box-container2">
             <div class="faq-box1">
-              <h3></h3>
-              <p></p>
+              <h3>What is the difference between the effective date of GST registration and the date of GST registration?</h3>
+              <p>The effective date of GST registration is when you become liable to pay GST, while the date of registration is when you are officially registered. Understanding this difference is important for determining when your GST obligations commence.</p>
             </div>
             <div class="faq-box1">
-              <h3></h3>
-              <p></p>
+              <h3>Is issuing a tax invoice and tax collection mandatory for voluntary GST registration?</h3>
+              <p>Yes, issuing a tax invoice and tax collection is mandatory for voluntary GST registration. Even if your turnover is below the threshold, compliance with invoicing and collection requirements is necessary to meet legal obligations and maintain transparency in your transactions.</p>
+            </div>
+          </div>
+
+          <div class="faq-box-container3">
+            <div class="faq-box1">
+              <h3>Can I avail input tax credit against a 5% GST liability for goods sold by my LLP?</h3>
+              <p>No, input tax credit cannot be availed against a 5% GST liability for goods sold by your LLP. Input tax credit is typically applicable for higher tax rates, and the limited 5% tax rate may not provide eligibility for claiming input tax credit in this scenario.</p>
+            </div>
+            <div class="faq-box1">
+              <h3>What should a business do about GST when not registered and dealing with GST-charging entities?</h3>
+              <p>If not registered for GST and dealing with GST-charging entities, consider registering to avail input tax credits. Without registration, businesses might bear the entire tax burden, impacting profitability.</p>
+            </div>
+          </div>
+
+          <div class="faq-box-container4">
+            <div class="faq-box1">
+              <h3>How to resolve error code SB001 in GST export through ICEGATE?</h3>
+              <p>Resolve GST export error code SB001 on ICEGATE by verifying data accuracy, ensuring proper document submission, and seeking assistance from ICEGATE or GST support for technical guidance.</p>
+            </div>
+            <div class="faq-box1">
+              <h3>How to deal with negative amount errors in GSTR3B due to credit notes?</h3>
+              <p>To address negative amount errors in GSTR3B due to credit notes, rectify the values, report corrections in subsequent returns, and maintain accurate documentation to reconcile discrepancies.</p>
+            </div>
+          </div>
+
+          <div class="faq-box-container5">
+            <div class="faq-box1">
+              <h3>How to handle GST compliance if my GSTIN was cancelled and I didn’t file the final return?</h3>
+              <p>If your GSTIN was cancelled without filing the final return, rectify by filing the pending return immediately. Failure to do so can lead to penalties and compliance issues.</p>
+            </div>
+            <div class="faq-box1">
+              <h3>What is the GST Annual Return?</h3>
+              <p>The GST Annual Return is a summary of a taxpayer's financial activities for a fiscal year, including details of sales, purchases, and taxes paid. It provides a comprehensive overview of the taxpayer's GST transactions.</p>
+            </div>
+          </div>
+
+          <div class="faq-box-container6">
+            <div class="faq-box1">
+              <h3>What is the HSN Code?</h3>
+              <p>The HSN Code, or Harmonised System of Nomenclature, is a standardised coding system for classifying goods internationally. It simplifies the identification of products for tax and regulatory purposes, aiding in smooth trade.</p>
+            </div>
+            <div class="faq-box1">
+              <h3>What is the full form of SAC Code?</h3>
+              <p>The full form of SAC Code is ‘Service Accounting Code.’ It is a system of classification for services under GST, helping in uniform taxation and simplifying compliance for service providers.</p>
             </div>
           </div>
 
 
+          <div class="faq-box-container7">
+            <div class="faq-box1">
+              <h3>Can a salaried person apply for GST?</h3>
+              <p>Yes, a salaried person can apply for GST registration if involved in business activities beyond their employment. Registering is mandatory if the aggregate turnover exceeds the prescribed threshold.</p>
+            </div>
+            <div class="faq-box1">
+              <h3>What is an E-way Bill?</h3>
+              <p>An E-way Bill is a document required for the movement of goods worth over a specified value between different states. It ensures tax compliance and facilitates the smooth transportation of goods by providing details about the consignment.</p>
+            </div>
+          </div>
     </div>
 
 </div>
