--- a/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
+++ b/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
@@ -14,26 +14,13 @@
     </div>
     <div class="container">
     <div class="content">
-      <h1>GST Registration Online</h1><br>
+      <h1>GST Return Filing Online</h1>
       <p>
-        ✔️ GST Application filing in 2 business days Starting at<strike> ₹749</strike> ₹499  T&C* 
+        ✔️ Opt for easy GST Return Filing before deadline. GST returns filed within the due date* by<br> senior experts
     </p>
     <br>
     <p>
-        ✔️ Simple process for new GST registration, application status tracking, and filing for<br>
-         clarifications
-    </p>
-    <br>
-    <p>
-        ✔️ Tailored services for GST needs of citizens, eCommerce sellers, and government offices
-    </p>
-    <br>
-    <p>
-        ✔️  All GST needs Met: CA-assisted online document submission, GST filing,<br> GSTIN procurement.
-    </p>
-    <br>
-    <p>
-        ✔️ Assistance for GST e-invoicing, ledger, and invoice maintenance
+        ✔️ Complete Process support with GST returns filed monthly, quarterly and Annually.
     </p>
     </div>  
     <div class="input-box">
@@ -62,6 +49,57 @@
         </ul>
         <a class="a2"href="#">View all Documents</a>
     </div>  
+</div>
+<div class="container101">
+    <h1>GST Return Filing</h1>
+   <div class="innercontainer101">
+    <div class="img1">
+        <img src="https://assets.vakilsearch.com/live-images/gstReturn.svg" class="img1">
+    </div>
+    
+        <div class="paras">
+            <p>GST return filing is a mandatory compliance process for businesses registered under the Goods and Services Tax (GST) regime, introduced in 2017. This process involves reporting business transaction details and tax information, thereby helping to standardize the GST framework and ensure proper tax collection and credit allocation.</p><br>
+       <br>
+        <p>The filing process includes submitting data on sales, purchases, output GST (tax collected on sales), and input tax credit (ITC) from purchases. Businesses are typically required to file GST returns monthly, quarterly, or annually, depending on their turnover and specific GST filing category. Each GST return summarizes details from invoices, receipts, payments, and other relevant financial transactions. To avoid penalties and maintain compliance, it is crucial for taxpayers to file their GST returns by the specified due dates.</p>
+        </div>
+   </div>
+
+   <div class="container102">
+      <h1>Benefits of Timely GST Return Submission</h1>
+      <p>Here are some of the benefits of timely GST returns filing:</p>
+      <div class="innercontainer102">
+        <div class="inner-box-container102">
+            <div class="box1">
+                <img src="https://assets.vakilsearch.com/live-images/avoidpenalties.svg" class="img102">
+                <h2>Avoiding Penalties</h2>
+                <p>Irrespective of the tax liability, all businesses registered under the GST Act should file their GST returns online. Failure to file GST returns on time may result in penalties and interest at a rate of up to 18% per year. Late fees of ₹100 up to ₹5000 are being charged for late filing. </p>
+            </div>
+            <div class="box1">
+                <img src="https://assets.vakilsearch.com/live-images/maintainCompliance.svg" class="img102">
+                <h2>Maintaining Compliance Status</h2>
+                <p>Filing GST returns before the deadline helps to avoid notice from the GST department and maintains compliance. Any regularities or inconsistencies in filing returns may reflect negatively on business compliance.  </p>
+            </div>
+            <div class="box1">
+                <img src="https://assets.vakilsearch.com/Itc.svg" class="img102">
+                <h2>Claim Input Tax Credit</h2>
+                <p>Filing GST returns on time helps businesses claim input tax credit. This allows them to easily deduct payable tax on overall sales and the tax paid on purchases. Businesses can use this credit by filing GST returns on time. </p>
+            </div>
+        </div>
+        <div class="inner-box-container102-1">
+            <div class="box2">
+                <img src="https://assets.vakilsearch.com/live-images/Benefit.svg" class="img102">
+                <h2>Benefit From Government Initiatives</h2>
+                <p>Government-backed schemes and incentives are provided to businesses and individuals who file GST returns on time. This prevents imposing interest and penalties. In most cases, businesses that consistently file GST returns are eligible for government initiatives that include faster processing of refunds. </p>
+            </div>
+            <div class="box2">
+                <img src="https://assets.vakilsearch.com/live-images/businessReputation.svg" class="img102">
+                <h2>Improved Business Reputation</h2>
+                <p>On-time GST returns reflect the commitment of the business entity to comply with the rules and regulations of the government. It also establishes a reputation for being responsible and trustworthy. This has a positive impact on consumers' partners and stakeholders when it comes to investment. </p>
+            </div>
+            </div>
+
+      </div>
+   </div>
 </div>
 </body>
 </html>
