--- a/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
+++ b/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
@@ -100,6 +100,26 @@
 
       </div>
    </div>
+
+   <div class="container103"> 
+    <div class="container103-1">
+  <h1>Documents Required for GST return filings</h1>
+  <p>Here is a list of documents required for GST return filings:</p><br>
+  <ul>
+    <li>Customer GSTIN</li><br>
+    <li> GST invoices</li><br>
+    <li>Place of supply</li><br>
+    <li>B2B and b2c service in voices</li><br>
+    <li>Bill number</li><br>
+    <li>Credit or debit notes</li> <br>
+    <li>HSN summary of goods sold</li><br>
+    <li>Amount of IGST, CGST, SGST applicable</li><br>
+    <li>Required GST return forms</li>
+  </ul>
+    <div>
+        <img src="https://assets.vakilsearch.com/gst_doc_Required.svg" class="img103">
+    </div>
+</div>
 </div>
 </body>
 </html>
