--- a/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
+++ b/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\shary\OneDrive\Desktop\legalsearch\css\GSTfilling.css">
+    <link rel="stylesheet" href="../../../css/GSTfilling.css">
     <title>Document</title>
 </head>
 <body>
