--- a/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
+++ b/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
@@ -121,5 +121,96 @@
     </div>
 </div>
 </div>
+
+<div class="container104">
+    <div class="inner-container104">
+       <div class="content104-1">
+        <h1>Eligibility Criteria for GST Return Filing</h1>
+        <p>Here is a list of eligibility criteria for GST return fillings. Business owners and dealers<br> registered under the Goods and Service Tax Act 2017 should file for GST returns <br>accordingly based on the nature of the business and transaction. The following entities<br> should definitely file for GST returns:</p><br><br>
+        <ul>
+            <li>Regular businesses registered under the Goods and Service Tax Act 2017</li><br>
+            <li>Entities registered under the composition scheme</li><br>
+            <li>An input service distributor individuals or entities deducting TDS and TCS</li><br>
+            <li>Businesses or individuals running supply chains</li><br>
+            <li>Tax payers generating revenue over ₹1.5 crore annually</li><br>
+                <li>Non residential Indians who conduct business activities with Indian citizens</li><br>
+                    <li>E-Commerce business owners and corporations</li><br>
+                        <li>Individuals holding a unique identification number or UIN</li><br>
+                            <li>It is mandatory to file a NIL GST Return, even if there is no business activity for the month.</li>
+        </ul>
+       </div>
+
+       <div class="img104-1">
+         <img src="https://assets.vakilsearch.com/bluelap.svg" class="img104-1">
+       </div>
+    </div>
+
+    <div class="inner-container104-2">
+        <div class="img104-2">
+           <img src="https://assets.vakilsearch.com/displayimg.svg">
+        </div>
+
+        <div class="container104-2">
+            <h1>Checklist for GST Return Filing</h1><br>
+            <p>Here is a list of checklists for GST return fillings. Filing your GST returns online requires you to submit<br> multiple documents and individuals clear cutting information on ITC claims.</p><br><br>
+            <ul>
+                <li>Supply bill</li><br>
+                    <li>GST refunds</li><br>
+                        <li>List of all tax invoices</li><br>
+                            <li>Information regarding pending ITC</li><br>
+                                <li>Information on credit notes or cancelled sales</li><br>
+                                    <li>Information on returned goods</li><br>
+                                        <li>Check credit for reverse charge</li><br>
+                                            <li>Cross verifying purchase bills</li><br>
+                                                <li>Sale reversed post GST payment</li><br>
+                                                    <li>Information on GST reversal on purchases</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="container105-cover">
+   <div class="container105">
+    <h1>Step-by-Step GST Return Filing Process</h1>
+    <p>Below is a three step process for GST return filing in India</p>
+   </div>
+   <div class="line">
+    <p>----------------------------------------------------------------------------------------------</p>
+   </div>
+   <div class="line-img">
+    <img src="https://assets.vakilsearch.com/live-images/register.svg" class="line-img1">
+    <img src="https://assets.vakilsearch.com/Polygon.svg" class="arrow">
+    <img src="https://assets.vakilsearch.com/live-images/procure.svg" class="line-img1">
+    <img src="https://assets.vakilsearch.com/Polygon.svg" class="arrow">
+    <img src="https://assets.vakilsearch.com/certify.svg"class="line-img1">
+   </div>
+
+   <div class="heading">
+    <h3>Step1</h3>
+    <h3>Step2</h3>
+    <h3>Step3</h3>
+
+   </div>
+
+   <div class="img-para">
+      <p>Get in Touch With Our Experts</p>
+      <p>Preparing and Updating invoices</p>
+      <p>GST Return Calculation and Filing</p>
+   </div>
+
+   <div class="inner-cover105">
+     <div class="innerr-cover105">
+        <h3 class="space">1. Get in touch with our experts</h3>
+        <p class="space">Book a slot with our GST experts and resolve all your queries. I not yet registered then get your GST registered on time</p>
+        <h3 class="space">2. Preparing and Updating invoices
+        </h3>
+        <p class="space">Provide the required documents and fill in essential details such as B2B invoices , B2C invoices, ITC details for initiating the return filling process.</p>
+        <h3 class="space">
+          3. GST Return Calculation and Filing
+        </h3>
+        <p class="space">Our team will calculate the GST returns and file them on your behalf on the online portal. You will get the acknowledgement after the GST returns are filed.</p>
+     </div>
+   </div>
+</div>
 </body>
 </html>
