--- a/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
+++ b/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
@@ -212,5 +212,137 @@
      </div>
    </div>
 </div>
+
+<div class="table-container">
+    <h1>Types of GST Returns and Their Due Dates in 2024</h1>
+    <p>Here is a clear outline of different GST returns and their due dates in 2024:</p>
+    <div class="table1">
+        <table border="1" cellspacing="0">
+            <tr>
+                <th>Return/Form</th>
+                <th>Description</th>
+                <th>Frequency</th>
+                <th>Due Date</th>
+                <th>Applicable Period</th>
+            </tr>
+
+            <tr>
+                <td>GSTR-1</td>
+                <td>Details of outward<br> supplies of goods or<br> services</td>
+                <td>Monthly</td>
+                <td>11th of the following<br> month</td>
+                <td>April 2024 – March<br> 2025</td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td>Quarterly</td>
+                <td>13th of the month<br> following the quarter</td>
+                <td>April-June 2024,<br> July-September 2024,<br> October-December 2024,<br> January-March 2025</td>
+            </tr>
+
+            <tr>
+                <td>GSTR-3B</td>
+                <td>Summary return of<br> outward supplies, input<br> tax credit, and <br>payment of tax</td>
+                <td>Monthly</td>
+                <td>20th of the following<br> month</td>
+                <td>April 2024 – March<br> 2025</td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+           
+        </table>
+
+    </div>
+
+</div>
 </body>
 </html>
