--- a/pages/Business-setup/Tax-&-Compliance/GSTRegistration.html
+++ b/pages/Business-setup/Tax-&-Compliance/GSTRegistration.html
@@ -39,10 +39,11 @@
     <div class="input-box">
      <form>
         <h2>Apply for GST Registration</h2>
-     <input type="email" value="Email" required class="info">
+        <input type="email" required class="info"placeholder="Email">
 
-     <input type="text" value="Phone Number" required class="info">
-     <input type="text" value="City/Pincode" required class="info">
+        <input type="text" required class="info" placeholder="Phone Number">
+        
+        <input type="text" required class="info" placeholder="City/Pincode">
      <h5>Get easy updates through Whatsapp</h5>
        <div class="toggler">
          <label class="switch">
