--- a/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
+++ b/pages/Business-setup/Tax-&-Compliance/GSTfilling.html
@@ -16,20 +16,21 @@
     <div class="content">
       <h1>GST Return Filing Online</h1>
       <p>
-        ✔️ Opt for easy GST Return Filing before deadline. GST returns filed within the due date* by<br> senior experts
+        ✔️ Opt for easy GST Return Filing before deadline. GST returns filed<br> within the due date* by senior experts
     </p>
     <br>
     <p>
-        ✔️ Complete Process support with GST returns filed monthly, quarterly and Annually.
+        ✔️ Complete Process support with GST returns filed monthly, quarterly<br> and Annually.
     </p>
     </div>  
     <div class="input-box">
      <form>
         <h2>Apply for GST Registration</h2>
-     <input type="email" value="Email" required class="info">
+     <input type="email" required class="info"placeholder="Email">
 
-     <input type="text" value="Phone Number" required class="info">
-     <input type="text" value="City/Pincode" required class="info">
+     <input type="text" required class="info" placeholder="Phone Number">
+     
+     <input type="text" required class="info" placeholder="City/Pincode">
      <h5>Get easy updates through Whatsapp</h5>
        <div class="toggler">
          <label class="switch">
